@@ -14,6 +14,7 @@ defined('_JEXEC') or die;
 
 JHtml::addIncludePath(JPATH_COMPONENT.'/helpers/html');
 JHtml::_('behavior.tooltip');
+JHTML::_('script','system/multiselect.js',false,true);
 
 $user	= JFactory::getUser();
 $listOrder	= $this->state->get('list.ordering');
